# dockerizedROSE

./: Dockerfile  README.md  buildRoseContainer.sh  check.sh  dockerizeRetypeLinux.sh  dockerizeRetypeMacOS.sh  id_rsa  run.sh  runMacOS.sh
exampleProject/development/exampleRoseProject/: Makefile.am  configure.ac
exampleProject/development/exampleRoseProject/include/: config.h
exampleProject/development/exampleRoseProject/tests/: test.sh  test1.cpp
exampleProject/exampleRoseProject/: AUTHORS  ChangeLog  NEWS  README  configFlags  configure.ac
exampleProject/exampleRoseProject/src/: Makefile.am  main.cpp
ssh/: config  id_rsa  known_hosts
ssh/.ssh/: id_rsa.pub  known_hosts
